<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.vaadin.addon</groupId>
	<artifactId>pointer-events</artifactId>
	<version>1.1-SNAPSHOT</version>
	<description>Basic pointer event support for GWT 2.6.0-rc2+</description>

	<properties>
		<!-- GWT -->
		<gwt.version>2.6.0-rc2</gwt.version>
		<gwt.style>OBF</gwt.style>

		<!-- Maven -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
	</properties>

	<build>
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.java</include>
					<include>**/*.gwt.xml</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Skips the GWTTestCases during Junit Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<exclude>**/*GwtTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<!-- Implementation-Title and Implementation-Version come from the 
								POM by default -->
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<!-- Package format version - do not change -->
							<Vaadin-Package-Version>1</Vaadin-Package-Version>

							<!-- Implementation-Title and Implementation-Version come from the 
								POM by default -->
							<Implementation-Title>Pointer Events for GWT</Implementation-Title>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>


			<!-- GWT -->
			<!-- 'mvn gwt:run' -->
			<!-- 'mvn gwt:debug' -->
			<!-- 'mvn gwt:compile' -->
			<!-- 'mvn gwt:test' or 'mvn integration-test' -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.6.0-rc1</version>
				<configuration>
					<strict>true</strict>

					<testTimeOut>180</testTimeOut>
					<mode>htmlunit</mode>
					<!-- Switch to a suite to run tests faster -->
					<!-- <includes>**/*GwtTestSuite.java</includes> -->
					<!-- <excludes>**/*GwtTest.java</excludes> -->
					<includes>**/*GwtTest.java</includes>

					<extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<style>${gwt.style}</style>

					<copyWebapp>true</copyWebapp>
					<hostedWebapp>${webappDirectory}</hostedWebapp>

					<runTarget>PointerEvents.html</runTarget>
					<module>com.vaadin.pointerevents.PointerEvents</module>
				</configuration>
				<!-- <executions> -->
				<!-- <execution> -->
				<!-- <goals> -->
				<!-- <goal>compile</goal> -->
				<!-- <goal>test</goal> -->
				<!-- </goals> -->
				<!-- </execution> -->
				<!-- </executions> -->
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<finalName>directorystuff</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<repositories>
		<repository>
			<id>google-maven-snapshot-repository</id>
			<name>Google Maven Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/google-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<name>Pointer Events for GWT</name>
	<organization>
		<name>Matti Tahvonen/Vaadin Ltd</name>
	</organization>
</project>
